Fixed z-index issue

--- a/app/component/search.scss
+++ b/app/component/search.scss
@@ -692,8 +692,7 @@ div.origin-destination-bar {
 
 div.autosuggest-panel {
   position: relative;
-  // TODO fix z-index
-  z-index: 3000;
+  z-index: 1000;
   padding-left: 11pt;
   padding-right: 11pt;
   padding-top: 25pt;
@@ -726,7 +725,7 @@ input.react-autosuggest__input{
   @include font-medium;
   border: 1px solid #fff;
   border-radius: 4px;
-  height: $search-form-input-height;
+  height: $search-form-input-height;  
   padding: 10px;
   outline: 0;
   appearance: none;
